@@ -1,3 +1,8 @@
+2003-06-10  Alasdair Allan <aa@astro.ex.ac.uk>
+
+        * Catalog.pm: Fixed bug in new _read_cluster() routine for
+          instances where we're reading from a file.
+          
 2003-06-09  Alasdair Allan <aa@astro.ex.ac.uk>
 
         * Fixed test scripts for Astro::Catalog::SuperCOSMOS so that
